--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,18 +16,17 @@
         </li>
   
         <li class="nav-item">
-          <a class="nav-link" href="/raking">Ranking</a>
+          <a class="nav-link" href="/busqueda">Busqueda</a>
         </li>
-  
-       
         
         <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">No Registrado</a>
+          <a class="nav-link" href="/recomendadas">Recomendadas</a>
         </li>
+
+       
+        
+        
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-      </form>
+     
     </div>
   </nav>
