--- a/src/app/components/ingresos/ingresos.component.html
+++ b/src/app/components/ingresos/ingresos.component.html
@@ -3,13 +3,13 @@
     <div class="py-5 text-center">
         <h2>Registro de Libro</h2>
         <p class="lead">
-            En la siguiente sección podrás registrar el libro que desee, y así compartir con neustra comunidad.
+            En la siguiente sección podrás registrar el libro que desee, y así compartir con nuestra comunidad.
         </p>
     </div>
 
     <div class="row">
       <div class="col-md-12 order-md-1">
-        <h4 class="mb-3">Datos del libro a registrar  </h4>
+        <h4 class="mb-3">Datos del libro a calificar  </h4>
     
     <form class="needs-validation" >
       <div class="row">
