--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -26,7 +26,7 @@
 
       <div class="card text-center border-info">
         <div class="card-body">
-          <h4 class="card-title">LIBRO 1</h4>
+          <h4 class="card-title">NUEVO INGRESO 1</h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lectus sem, 
                                 tempor vitae mattis malesuada, ornare sed erat. Pellentesque nulla dui, congue
                                 nec tortor sit amet, maximus mattis dui. </p>
@@ -38,7 +38,7 @@
 
       <div class="card text-center border-info">
         <div class="card-body">
-          <h4 class="card-title">LIBRO 2</h4>
+          <h4 class="card-title">NUEVO INGRESO 2</h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lectus sem, 
                                 tempor vitae mattis malesuada, ornare sed erat. Pellentesque nulla dui, congue
                                 nec tortor sit amet, maximus mattis dui. </p>
@@ -50,7 +50,7 @@
   
       <div class="card text-center border-info">
         <div class="card-body">
-          <h4 class="card-title">LIBRO 3</h4>
+          <h4 class="card-title">NUEVO INGRESO 3</h4>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam lectus sem, 
                                 tempor vitae mattis malesuada, ornare sed erat. Pellentesque nulla dui, congue
                                 nec tortor sit amet, maximus mattis dui. </p>
@@ -62,3 +62,6 @@
 
     </div>
   </div>  
+
+
+
