--- a/src/app/components/recomendadas/recomendadas.component.html
+++ b/src/app/components/recomendadas/recomendadas.component.html
@@ -1,18 +1,56 @@
-
 <section class="jumbotron text-center">
     <div class="container">
-        <h1 class="jumbotron-heading"> Ranking de Libros </h1>
-        <p class="lead text-muted"> Estos son los mejores libros que tenemos para ti ...</p>
-        <p>
-            <a href="#" class="btn btn-primary my-2">Top los 10 mejores</a><br>
-            <a href="#" class="btn btn-primary my-2">Top por categoria</a>
-            
-        </p>
+        <h1 class="jumbotron-heading"> Te recomendamos lo que necesitas</h1>
+        <p class="lead text-muted"> En está sección según lo que nos indiques te recomendamos los mejores libros ...</p>
+        
+        <form  class="needs-validation" >
+            <div class="form-group">
+              
+                <div class="col-md-12">
+                 
+                    <select class="form-control" id="exampleFormControlSelect1" aria-placeholder="ingresa">
+                    <option value="" selected disabled>Seleccione Categoria</option>    
+                    <option value="1" >Drama</option>
+                    <option value="2">Terror</option>
+                     <option value="3">Accion y ficcion</option>
+                    <option value="4">Infantil</option>
+                     
+                    </select>
+                    <div class="invalid-feedback">
+                        Dato requerido.
+                     </div>
+                </div>
+                <br>
+                <div class="col-md-12">
+                    
+                <select class="form-control" id="exampleFormControlSelect1">
+                    <option value="" selected disabled>Seleccione Idioma</option>    
+                <option value="1">Español</option>
+                <option value="2">Ingles</option>
+                 <option value="3">Portugues</option>
+                <option value="4">Italiano</option>
+                 <option value="5" >Frances</option>
+                </select>
+                <div class="invalid-feedback">
+                    Dato requerido.
+                 </div>
+                </div>
+                
+                <div class="col-md-12">
+                    <br>
+                    <button class="btn btn-primary btn-lg btn-block" type="submit">Buscar</button>
+                </div>
+               
+            </div>
+        </form>   
+        
     </div>
 
     <div class="resultado py-5 bg-light">
         <div class="container">
+            <h1 class="jumbotron-heading"> Libros recomendados </h1>
             <div class="row">
+                
                 <div class="col-md-4">
                     <div class="card mb-4 box shadow">
                         <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22348%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20348%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1758591408c%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A17pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1758591408c%22%3E%3Crect%20width%3D%22348%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22116.71875%22%20y%3D%22120.3%22%3EImagen%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
